cmss/main/default/objects/FinancialOperation__c/FinancialOperation__c.object-meta.xml
<CustomObject>
    <description>Obraty na smlouvě (pro: stavební spoření, úvěr, meziúvěr, RŽP), bude se dotahovat WS</description>
    <label>Financial Operation</label>
    <nameField>
        <label>FinancialOperation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>