cmss/main/default/objects/FinancialOperation__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <description>Kód banky</description>
    <label>Bank Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>