cmss/main/default/objects/FinancialOperation__c/fields/ConstantSymbol__c.field-meta.xml
<CustomField>
    <fullName>ConstantSymbol__c</fullName>
    <description>Konstantní symbol</description>
    <label>Constant Symbol</label>
    <length>4</length>
    <type>Text</type>
</CustomField>