cmss/main/default/objects/FinancialOperation__c/fields/OperationAmount__c.field-meta.xml
<CustomField>
    <fullName>OperationAmount__c</fullName>
    <description>Částka</description>
    <label>Operation Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>