cmss/main/default/objects/FinancialOperation__c/fields/OperationDate__c.field-meta.xml
<CustomField>
    <fullName>OperationDate__c</fullName>
    <description>Datum provedení operace</description>
    <label>Operation Date</label>
    <type>DateTime</type>
</CustomField>