cmss/main/default/objects/FinancialOperation__c/fields/OperationMessage__c.field-meta.xml
<CustomField>
    <fullName>OperationMessage__c</fullName>
    <description>Zpráva</description>
    <label>Operation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>