cmss/main/default/objects/FinancialOperation__c/fields/OperationName__c.field-meta.xml
<CustomField>
    <fullName>OperationName__c</fullName>
    <description>Název operace</description>
    <label>Operation Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>