cmss/main/default/objects/FinancialOperation__c/fields/PostingDate__c.field-meta.xml
<CustomField>
    <fullName>PostingDate__c</fullName>
    <description>Datum zaúčtování</description>
    <label>Posting Date</label>
    <type>DateTime</type>
</CustomField>