cmss/main/default/objects/FinancialOperation__c/fields/SenderRecipientName__c.field-meta.xml
<CustomField>
    <fullName>SenderRecipientName__c</fullName>
    <description>Jméno příjemce nebo odesílatele</description>
    <label>Sender Recipient Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>