cmss/main/default/objects/FinancialOperation__c/fields/SpecificSymbol__c.field-meta.xml
<CustomField>
    <fullName>SpecificSymbol__c</fullName>
    <description>Specifický symbol</description>
    <label>Specific Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>