cmss/main/default/objects/FinancialOperation__c/fields/VariableSymbol__c.field-meta.xml
<CustomField>
    <fullName>VariableSymbol__c</fullName>
    <description>Variabilní symbol</description>
    <label>Variable Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>